k8s/infrastructure/proxy/dns-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: identityserver-ui
spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
